tests/src/frontend/typechecking/invalid/annotation_on_collection.sk
class Toto<T: Orderable>() {
  fun toString[T: Show](): String {
    "Hello"
  }

  static fun createFromItems<I: Sequence<T>>(_: I): Toto<T> {
    Toto<T>()
  }
}

fun test(): Toto<Bool> {
  Toto<String>[];
}
